backend/scoring-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scoring-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: scoring-service
    weight: 100
  wildcardPolicy: None
